fixed spacing

--- a/resources/css/about.css
+++ b/resources/css/about.css
@@ -22,7 +22,8 @@ body{
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
-    padding: 0 31%;
+    padding:0 31%;
+    padding-bottom: 0.5em;
 }
 
 #main_body{
@@ -37,4 +38,12 @@ body{
     font-size: 15px;
     text-decoration:none;
     color:rgb(16, 116, 149);
+}
+
+ul{
+    margin: 1em 0;
+}
+
+h3{
+    margin: 0.5em 0;
 }
