--- a/resources/css/nav_style.css
+++ b/resources/css/nav_style.css
@@ -1,7 +1,5 @@
 * {
-    margin-top: 0;
-    margin-left:0;
-    margin-right:0;
+    margin:0;
 }
 
 nav{
@@ -10,7 +8,6 @@ nav{
 
 .link{
     font-size: 20px;
-    /*padding: 10px 60px;*/
     text-decoration:none;
     color: black;
 }
